# ce_perm_c

./: .gitignore  README.md  main.py  meson.build  pyproject.toml
.circleci/: config.yml
ce_perm_c/: meson.build
ce_perm_c/ceviche/: __init__.py  derivatives.py  fdfd.py  meson.build  primitives.py  solvers.py  viz.py
ce_perm_c/mini_sci/: _superlu_utils.c  _superlumodule.c  _superluobject.h  linsolve.py  meson.build
ce_perm_c/mini_sci/SuperLU/: __init__.py
ce_perm_c/mini_sci/SuperLU/SRC/: cgssv.c  sgssv.c  slu_zdefs.h
examples/: test_grad.py  test_my_fdfd.py  test_spsolve.py  timing.py
