[project]
name = "ce_perm_c"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "meson-python>=0.13.0",
    "numpy<2.0",
    "wheel",
    "meson>=1.0.0",
    "scipy>=1.13.1",
    "autograd>=1.7.0",
]

[build-system]
requires = ["meson-python>=0.13.0", "numpy<2.0", "wheel", "meson>=1.0.0"]
build-backend = "mesonpy"
